--- a/views/book.html
+++ b/views/book.html
@@ -3,20 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="https://i.pinimg.com/736x/04/67/ca/0467ca585a1a688fa9d0e53f23c27780.jpg" type="image/jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Books</title>
 </head>
 <body>
     <h1>Books</h1>
-    <a id="loginLink" href="/login">Login</a>
-    <a href="/register">Register</a>
-    <a href="/cart">Cart</a>
-    <a href="/orders">Orders</a>
+    <div id="message" style="display: none;"></div>
+
+    <div class="navbar">
+        <a id="loginLink" href="/login">Login</a>
+        <a href="/register">Register</a>
+        <a href="/cart">Cart</a>
+        <a href="/orders">Orders</a>
+    </div>
+
+
+
     <button id="logoutButton" style="display: none;">Logout</button>
     <input type="text" id="search" placeholder="Search products">
     <button id="searchButton">Search</button>
     <ul id="productList"></ul>
-    <div id="message" style="display: none;"></div>
+
+    <div id="gif_izq">
+        <img src="https://gifdb.com/images/high/the-jungle-book-magical-library-1koj7fnhhbaxor27.gif" alt="books_gif">
+    </div>
+
     <script>
         const token = localStorage.getItem('token');
 
