--- a/views/cart.html
+++ b/views/cart.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="https://i.pinimg.com/736x/04/67/ca/0467ca585a1a688fa9d0e53f23c27780.jpg" type="image/jpeg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Carrito de Compras</title>
 </head>
 <body>
     <h1>Carrito de Compras</h1>
-    <a href="/login">Login</a>
-    <a href="/register">Register</a>
-    <a href="/book">Books</a>
-    <a href="/orders">Orders</a>
+    <div class="navbar">
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+        <a href="/book">Books</a>
+        <a href="/orders">Orders</a>
+    </div>
     <button id="logoutButton">Logout</button>
+    <div id="message" style="display: none;"></div>
+
     <ul id="cartItems"></ul>
     <button id="placeOrderButton">Realizar Pedido</button>
-    <div id="message" style="display: none;"></div>
+
+    <div id="gif_izq_m">
+        <img src="https://sorryimbookedcom.files.wordpress.com/2019/11/5-relatable-reader-gifs-1.gif" alt="books_gif">
+    </div>
+
     <script>
         const token = localStorage.getItem('token');
 
